startup geliştirmesine kadar olan kısım

--- a/MAMSys.WebAPI/appsettings.json
+++ b/MAMSys.WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "www.xyz.com",
+    "Issuer": "www.xyaz.com",
+    "AccessTokenSuresi": 20,
+    "GuvenlikAnahtari": "CokGizliAnahtar" 
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
