--- a/MAMSys.WebAPI/appsettings.json
+++ b/MAMSys.WebAPI/appsettings.json
@@ -2,8 +2,8 @@
   "TokenOptions": {
     "Audience": "www.xyz.com",
     "Issuer": "www.xyaz.com",
-    "AccessTokenSuresi": 20,
-    "GuvenlikAnahtari": "CokGizliAnahtar" 
+    "Expiration": 20,
+    "SecurityKey": "CokGizliAnahtarCokGizliAnahtar"
   },
   "Logging": {
     "LogLevel": {
