--- a/MAMSys.Core/MAMSys.Core.csproj
+++ b/MAMSys.Core/MAMSys.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.5.0" />
     <PackageReference Include="Castle.Core" Version="4.4.0" />
     <PackageReference Include="FluentValidation" Version="8.6.0" />
+    <PackageReference Include="log4net" Version="2.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
