--- a/MAMSys.WebAPI/log4net.config
+++ b/MAMSys.WebAPI/log4net.config
@@ -35,4 +35,14 @@
 
   </root>
 
+  <logger name="JsonFileLogger">
+    <level value="ALL"/>
+    <appender-ref ref="JsonFileLogger"/>
+  </logger>
+
+  <logger name="DatabaseLogger">
+    <level value="ALL"/>
+    <appender-ref ref="DatabaseLogger"/>
+  </logger>
+
 </log4net>
